@@ -12,3 +12,16 @@
 - Muting/unmuting - key M
 - Spectrum visualizer when mp3 file loaded
 - Changing spectrum color using keys - R - red, G - green, B - blue
+
+## How to run project
+In order to run the project you should add the following VM Options ( easy using IntelliJ , Eclipse or Netbeans ) :
+
+```
+--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
+--add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix
+--add-exports javafx.base/com.sun.javafx.binding=com.jfoenix
+--add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix
+--add-exports javafx.base/com.sun.javafx.event=com.jfoenix
+--add-exports javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls,
+--add-exports javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls
+```
